PN-9587 ec-Metadata indexing